--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rocket_auth"
-version = "0.4.0"
+version = "0.5.0"
 authors = ["tvallotton@uc.cl"]
 edition = "2018"
 license = "MIT or Apache-2.0"
@@ -29,31 +29,31 @@ optional = true
 
 
 [dependencies]
-rand = "0.8.5"
-rust-argon2 = "1.0.0"
-lazy_static = "1.4.0"
-regex = "1.5.6"
-serde_json = "1.0.82"
-chashmap = "2.2.2"
-thiserror = "1.0.31"
-async-trait = "0.1.56"
-fehler = "1.0.0"
-chrono = "0.4.19"
-validator = { version = "0.15.0", features = ["derive"] }
-futures= "0.3.21"
+rand = ">=0.8.5"
+rust-argon2 = ">=1.0.0"
+lazy_static = ">=1.4.0"
+regex = ">=1.5.6"
+serde_json = ">=1.0.82"
+chashmap = ">=2.2.2"
+thiserror = ">=1.0.31"
+async-trait = ">=0.1.56"
+fehler = ">=1.0.0"
+chrono = ">=0.4.19"
+validator = { version = ">=0.15.0", features = ["derive"] }
+futures= ">=0.3.21"
 
 
 [dependencies.sqlx]
-version = "0.6.0"
+version = ">=0.6.0"
 optional = true
 
 
 [dependencies.rocket]
-version = "0.5.0-rc.2"
+version = ">=0.5.0"
 features = ["secrets"]
 
 [dependencies.serde]
-version = "1.0.138"
+version = ">=1.0.138"
 features = ["derive"]
 
 [dependencies.tokio-postgres]
@@ -75,7 +75,7 @@ tokio-postgres= "0.7.6"
 
 
 [dev-dependencies.rocket]
-version = "0.5.0-rc.2"
+version = ">=0.5.0"
 features = ["secrets", "json"]
 
 [dev-dependencies.redis]
@@ -84,12 +84,12 @@ features = ["aio", "tokio-comp"]
 
 
 [dev-dependencies.rocket_dyn_templates]
-version = "0.1.0-rc.2"
+version = ">=0.1.0"
 features = ["tera"]
 
 
 [dev-dependencies.sqlx]
-version = "0.6.0"
+version = ">=0.6.0"
 features = ["runtime-tokio-rustls"]
 
 [dev-dependencies.rocket_auth]
